# Exes-Manen

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/rules/: coding.mdc
backend/: .gitignore  add_missing_columns.sql  automap_cli.py  init_db.py  manage.py  migrate_schema.py  package.json  pyproject.toml  requirements.txt  run_server.py
backend/app/: __init__.py  auth_resource.py  automap_manager.py  email_service.py  main.py  models.py  routes.py
backend/app/routes/: __init__.py  auth.py  companies.py  expenses.py  schema.py  users.py
backend/migrations/versions/: 59535b117b98_add_password_field_to_user.py  a69fd67d1959_initial_tables.py  f4b4119f9523_add_name_field_to_users_table.py
frontend/: .gitignore  middleware.ts  next.config.js  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/: CountryCurrencyDemo.tsx  ExpenseList.tsx  ExpenseModal.tsx  InteractiveFeatures.tsx  Navbar.tsx  NavbarWrapper.tsx  ProtectedRoute.tsx  QueryProvider.tsx  ThemeProvider.tsx
frontend/src/constants/: admin.ts
frontend/src/db/: index.ts
frontend/src/hooks/: useAuth.ts  useCountries.ts
frontend/src/lib/: auth.ts  db.ts  index.ts  query-client.ts  theme.ts  utils.ts  variants.ts
frontend/src/services/: authService.ts  emailService.ts
frontend/src/stores/: index.ts  useAuthStore.ts  useThemeStore.ts
frontend/src/types/: employee.ts
frontend/src/utils/: date.ts  password.ts
(+28 files in other folders)
